cmake_minimum_required(VERSION 3.23)
project(oop)

set(CMAKE_CXX_STANDARD 14)

add_executable(aud7program1 aud7/aud7program1.cpp aud9/aud9program1.cpp aud9/aud9program2.cpp aud9/aud9program3.cpp aud10/aud10program1.cpp)
add_executable(aud8program1 aud8/aud8program1.cpp)
add_executable(aud8program2 aud8/aud8program2.cpp)
add_executable(aud9program1 aud9/aud9program1.cpp)
add_executable(aud9program2 aud9/aud9program2.cpp)
add_executable(aud9program3 aud9/aud9program3.cpp)
add_executable(aud10program1 aud10/aud10program1.cpp)
add_executable(aud10program2 aud10/aud10program2.cpp)
add_executable(aud10program3 aud10/aud10program3.cpp)
add_executable(aud11program1 aud11/aud11program1.cpp)
add_executable(aud11program2 aud11/aud11program2.cpp)
add_executable(aud11program3 aud11/aud11program3.cpp)
add_executable(labs2zad1 labs2/labs2zad1.cpp)
add_executable(labs2zad2 labs2/labs2zad2.cpp)
add_executable(labs2zad3 labs2/labs2zad3.cpp)
add_executable(labs3zad1 labs3/labs3zad1.cpp)
add_executable(labs3zad2 labs3/labs3zad2.cpp)
add_executable(labs3zad3 labs3/labs3zad3.cpp)
add_executable(labs3zad4 labs3/labs3zad4.cpp)
add_executable(labs3zad5 labs3/labs3zad5.cpp)