cmake_minimum_required(VERSION 3.23)
project(oop)

set(CMAKE_CXX_STANDARD 14)

add_executable(aud7program1 aud7/aud7program1.cpp aud9/aud9program1.cpp aud9/aud9program2.cpp aud9/aud9program3.cpp aud10/aud10program1.cpp)
add_executable(aud8program1 aud8/aud8program1.cpp)
add_executable(aud8program2 aud8/aud8program2.cpp)
add_executable(aud9program1 aud9/aud9program1.cpp)
add_executable(aud9program2 aud9/aud9program2.cpp)
add_executable(aud9program3 aud9/aud9program3.cpp)
add_executable(aud10program1 aud10/aud10program1.cpp)
add_executable(aud10program2 aud10/aud10program2.cpp)
add_executable(aud10program3 aud10/aud10program3.cpp)
add_executable(aud11program1 aud11/aud11program1.cpp)
add_executable(aud11program2 aud11/aud11program2.cpp)
add_executable(aud11program3 aud11/aud11program3.cpp)
add_executable(labs2zad1 labs2/labs2zad1.cpp)
add_executable(labs2zad2 labs2/labs2zad2.cpp)
add_executable(labs2zad3 labs2/labs2zad3.cpp)
add_executable(labs3zad1 labs3/labs3zad1.cpp)
add_executable(labs3zad2 labs3/labs3zad2.cpp)
add_executable(labs3zad3 labs3/labs3zad3.cpp)
add_executable(labs3zad4 labs3/labs3zad4.cpp)
add_executable(labs3zad5 labs3/labs3zad5.cpp)
add_executable(labs4zad1 labs4/labs4zad1.cpp)
add_executable(labs4zad2 labs4/labs4zad2.cpp)
add_executable(labs4zad3 labs4/labs4zad3.cpp)
add_executable(labs4zad4 labs4/labs4zad4.cpp)
add_executable(labs4zad5 labs4/labs4zad5.cpp)
add_executable(labs4zad6 labs4/labs4zad6.cpp)
add_executable(labs5zad1 labs5/labs5zad1.cpp)
add_executable(labs5zad2 labs5/labs5zad2.cpp)
add_executable(labs5zad3 labs5/labs5zad3.cpp)
add_executable(labs5zad4 labs5/labs5zad4.cpp)
add_executable(labs6zad1 labs6/labs6zad1.cpp)
add_executable(labs6zad2 labs6/labs6zad2.cpp)
add_executable(labs6zad3 labs6/labs6zad3.cpp)
add_executable(labs6zad4 labs6/labs6zad4.cpp)
add_executable(labs6zad5 labs6/labs6zad5.cpp)
add_executable(labs7zad1 labs7/labs7zad1.cpp)
add_executable(labs7zad2 labs7/labs7zad2.cpp)
add_executable(labs7zad3 labs7/labs7zad3.cpp)
add_executable(labs7zad4 labs7/labs7zad4.cpp)
add_executable(labs7zad5 labs7/labs7zad5.cpp)
add_executable(labs7zad6 labs7/labs7zad6.cpp)
add_executable(labs7zad7 labs7/labs7zad7.cpp)
add_executable(labs8zad1 labs8/labs8zad1.cpp)
add_executable(labs8zad2 labs8/labs8zad2.cpp)
add_executable(labs9zad1 labs9/labs9zad1.cpp)
add_executable(labs9zad2 labs9/labs9zad2.cpp)
add_executable(labs9zad3 labs9/labs9zad3.cpp)
add_executable(vezbi vezbi/vezbi.cpp)